@@ -2589,6 +2589,7 @@ fieldset .disabled-field td {
 
 .rte_table td {
     vertical-align: middle;
+    padding: 0.2em;
 }
 
 .rte_table tr td:nth-child(1) {
