@@ -37,6 +37,7 @@ phpMyAdmin - ChangeLog
 - Patch #3500882 Fixing checkbox behaviour while editing identical rows
 + rfe #3441722 [interface] Display description of datatypes
 + rfe #3517835 [structure] Move columns easily
++ Ajaxified "Create View" functionality
 
 3.5.2.0 (not yet released)
 - bug #3521416 [interface] JS error when editing index
